--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "yfiles_jupyter_graphs_for_kuzu"
+name = "yfiles_jupyter_graphs_for_ryugraph"
 version = "1.1.1"
 authors = [
   {name = "yWorks Support Team", email= "yfileshtml@yworks.com"},
 ]
-description = "A Kuzu graph visualization package that uses the yfiles-jupyter-graphs widget"
+description = "A RyuGraph graph visualization package that uses the yfiles-jupyter-graphs widget"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -27,10 +27,10 @@ dependencies = [
 ]
 
 [project.urls]
-License = "https://github.com/yWorks/yfiles-jupyter-graphs-for-kuzu/blob/kuzu/LICENSE.md"
-"Bug Tracker" = "https://github.com/yWorks/yfiles-jupyter-graphs-for-kuzu/issues"
-Documentation = "https://github.com/yWorks/yfiles-jupyter-graphs-for-kuzu/"
-Repository = "https://github.com/yWorks/yfiles-jupyter-graphs-for-kuzu.git"
+License = "https://github.com/yWorks/yfiles-jupyter-graphs-for-ryugraph/blob/main/LICENSE.md"
+"Bug Tracker" = "https://github.com/yWorks/yfiles-jupyter-graphs-for-ryugraph/issues"
+Documentation = "https://github.com/yWorks/yfiles-jupyter-graphs-for-ryugraph/"
+Repository = "https://github.com/yWorks/yfiles-jupyter-graphs-for-ryugraph.git"
 
 [build-system]
 requires = ["setuptools>=61.0"]
